# PhotoProcessor

./: .gitignore  CMakeLists.txt  ROADMAP.md  main.c  photo_processor_types.h
app/: CMakeLists.txt  main.cpp
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  exv_conf.h
build-debug/app/: Makefile  bpp_app  cmake_install.cmake
build-debug/lib/: libgmock.so.1.17.0  libgmock_main.so.1.17.0  libgtest.so.1.17.0  libgtest_main.so.1.17.0
build-debug/src/: Makefile  cmake_install.cmake
build-debug/test/: Makefile  bpp_tests  cmake_install.cmake
color_management/: CSTApp.c  CSTApp.h  gamma_transform.c  gamma_transform.h
data_structures/: imageVector.c  imageVector.h  image_data_slice.c  image_data_slice.h  image_slice.c  image_slice.h
docs/: CNAME  index.md
docs/design_planning/: image_pipeline_architecture.md
file_handling/: bmpWrite.c  bmpWrite.h  import.c  import.h  writeTiff.c  writeTiff.h
lut-handle/: lutApp.c  lutApp.h  lutMenu.c  lutMenu.h  lutParse.c  lutParse.h
src/: CMakeLists.txt
src/image_adjustments/general/: exposure.cpp  exposure.hpp
src/image_handling/: image_handler.cpp
src/io/: image_io.cpp  image_io.hpp  image_io_error.hpp  image_ver.cpp
src/types/: image.hpp
test/: CMakeLists.txt
test/io_tests/: image_io_test.cpp  image_ver_test.cpp
